--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,9 +5,10 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
