--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,23 +1,31 @@
-name: Docker Image CI
+name: build and push
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  docker:
+  build_and_push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      -
-        name: Login to Docker Hub
+      - name: login
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: extract metadata
+        id: meta
+        uses: docker/metadata-action@4
+        with:
+          images: ghcr.io/genych/php82
+      - name: build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: genych/php82:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
